{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 179,
  "lineage": "14ad7c2c-bd14-bb9e-9ef2-3cf40dd97d05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "edlarios_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edlarios_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dc2dd8e0efbc46a",
            "arn": "arn:aws:ec2:us-east-1:191260705629:instance/i-03d6faef9dc4cb12b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d6faef9dc4cb12b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edlarios_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbf37708f6bad250",
            "private_dns": "ip-10-0-1-160.ec2.internal",
            "private_ip": "10.0.1.160",
            "public_dns": "ec2-18-214-39-86.compute-1.amazonaws.com",
            "public_ip": "18.214.39.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:191260705629:key/68c4b012-5633-44fd-8db0-e50be502641c",
                "throughput": 0,
                "volume_id": "vol-0b313a95036dd4ffd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00585d0da23670502",
            "tags": {
              "Name": "edlarios_web_0"
            },
            "tags_all": {
              "Name": "edlarios_web_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040d8e3cc44b80eb8"
            ]
          },
          "dependencies": [
            "aws_key_pair.edlarios_kp",
            "aws_security_group.edlarios_web_sg",
            "aws_subnet.edlarios_public_subnet",
            "aws_vpc.edlarios_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edlarios_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:internet-gateway/igw-0b48572e2a84d49bd",
            "id": "igw-0b48572e2a84d49bd",
            "owner_id": "191260705629",
            "tags": {
              "Name": "edlarios_igw"
            },
            "tags_all": {
              "Name": "edlarios_igw"
            },
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "dependencies": [
            "aws_vpc.edlarios_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edlarios_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:route-table/rtb-0aadf88a8c3241729",
            "id": "rtb-0aadf88a8c3241729",
            "owner_id": "191260705629",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.edlarios_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edlarios_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:route-table/rtb-06ddfc3e971700b0a",
            "id": "rtb-06ddfc3e971700b0a",
            "owner_id": "191260705629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b48572e2a84d49bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.edlarios_igw",
            "aws_vpc.edlarios_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078cc1954042efb06",
            "route_table_id": "rtb-0aadf88a8c3241729",
            "subnet_id": "subnet-0f3929d2dd5b3a520"
          },
          "dependencies": [
            "aws_route_table.edlarios_private_rt",
            "aws_subnet.edlarios_private_subnet",
            "aws_vpc.edlarios_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b711cb608d742112",
            "route_table_id": "rtb-0aadf88a8c3241729",
            "subnet_id": "subnet-0c174b275166b5957"
          },
          "dependencies": [
            "aws_route_table.edlarios_private_rt",
            "aws_subnet.edlarios_private_subnet",
            "aws_vpc.edlarios_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009682b08f30cb73f",
            "route_table_id": "rtb-06ddfc3e971700b0a",
            "subnet_id": "subnet-00585d0da23670502"
          },
          "dependencies": [
            "aws_internet_gateway.edlarios_igw",
            "aws_route_table.edlarios_public_rt",
            "aws_subnet.edlarios_public_subnet",
            "aws_vpc.edlarios_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edlarios_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:security-group/sg-0b8a9c8d8ab15cc40",
            "description": "Security group for edlarios databases",
            "egress": [],
            "id": "sg-0b8a9c8d8ab15cc40",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040d8e3cc44b80eb8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "edlarios_db_sg",
            "name_prefix": "",
            "owner_id": "191260705629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edlarios_db_sg"
            },
            "tags_all": {
              "Name": "edlarios_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.edlarios_web_sg",
            "aws_vpc.edlarios_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edlarios_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:security-group/sg-040d8e3cc44b80eb8",
            "description": "Security group for edlarios web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040d8e3cc44b80eb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "187.184.18.219/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "edlarios_web_sg",
            "name_prefix": "",
            "owner_id": "191260705629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edlarios_web_sg"
            },
            "tags_all": {
              "Name": "edlarios_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.edlarios_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edlarios_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:subnet/subnet-0f3929d2dd5b3a520",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3929d2dd5b3a520",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191260705629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edlarios_private_subnet_0"
            },
            "tags_all": {
              "Name": "edlarios_private_subnet_0"
            },
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "dependencies": [
            "aws_vpc.edlarios_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:subnet/subnet-0c174b275166b5957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c174b275166b5957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191260705629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edlarios_private_subnet_1"
            },
            "tags_all": {
              "Name": "edlarios_private_subnet_1"
            },
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "dependencies": [
            "aws_vpc.edlarios_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edlarios_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:subnet/subnet-00585d0da23670502",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00585d0da23670502",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "191260705629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edlarios_public_subnet_0"
            },
            "tags_all": {
              "Name": "edlarios_public_subnet_0"
            },
            "vpc_id": "vpc-0619e364a7e168855"
          },
          "dependencies": [
            "aws_vpc.edlarios_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edlarios_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191260705629:vpc/vpc-0619e364a7e168855",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0533583a75435b872",
            "default_route_table_id": "rtb-0b8d01d327dea3009",
            "default_security_group_id": "sg-0f25faf8b789c0138",
            "dhcp_options_id": "dopt-0255d8898d8e35069",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0619e364a7e168855",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8d01d327dea3009",
            "owner_id": "191260705629",
            "tags": {
              "Name": "edlarios_vpc"
            },
            "tags_all": {
              "Name": "edlarios_vpc"
            }
          }
        }
      ]
    }
  ]
}